challenge1/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenge1
  namespace: challenge1
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: challenge1
  template:
    metadata:
      labels:
        app: challenge1
    spec:
      containers:
      - image: 76896/plan-a-tech-challenge1:latest
        name: challenge1
        ports:
        - containerPort: 8000
        imagePullPolicy: Always
        resources:
          limits:
            memory: "55Mi"
            cpu: "40m"
          requests:
            memory: "55Mi"
            cpu: "40m"
