challenge1/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: challenge1-service
  namespace: challlenge1
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: challenge1
